# s3wm

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  setup.cfg
.github/workflows/: main.yml  pre-commit.yaml  release.yaml
examples/: bind_function_to_key.py  simple_config.py  startup_actions.py
requirements/: base.requirements.txt  dev.requirements.txt
s3wm/: __init__.py  keymap.py  main.py  s3wm.py  wm_config.py
s3wm/layouts/: __init__.py  default_tile.py  key_bindings.py  tab.py
s3wm/layouts/default_tile/: __init__.py  key_bindings.py  layout.py  tab.py
s3wm/tests/: __init__.py  test_stub.py
s3wm_core/: __init__.py  atoms.py  key_combination.py  keymap.py  layout_base.py  s3screen.py  s3window.py  utils.py  wm_config.py  x_models.py
s3wm_core/atoms/: __init__.py  base.py  free_desktop_atoms.py  s3_atoms.py  x11_atoms.py
src/: config.py  keymap.py  s3wm.py  s3wm_types.py  utils.py
src/layouts/: default_tile.py
src/layouts/default_tile/: __init__.py  layout.py  window_group.py
tests/: test_s3wm.py
