[tool.poetry]
name = "s3wm"
version = "0.1.0"
description = ""
authors = ["Pavel Kirilin <win10@list.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
xlib = "^0.21"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
black = "^20.8b1"
mypy = "^0.800"
isort = "^5.7.0"
pre-commit = "^2.10.1"
yesqa = "^1.2.2"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
